# TOFdeco

./: CMakeLists.txt  README.md  TOFdeco.sh
src/: CMakeLists.txt
src/Compressed/: CMakeLists.txt  Decoder.cxx  Decoder.h  Encoder.cxx  Encoder.h  dataFormat.h
src/Raw/: CMakeLists.txt  Checker.cxx  Checker.h  Decoder.cxx  Decoder.h  dataFormat.h
src/Utils/: CMakeLists.txt  compressed_decoder.cxx  compressed_encoder.cxx  compressed_histogrammer.cxx  raw_adder.cxx  raw_checker.cxx  raw_decoder.cxx  raw_histogrammer.cxx  raw_mem.cxx  raw_stripper.cxx
